--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A croissant is a laminated, yeast-leavened bakery product that contains
+      dough/roll-in fat layers to create a flaky, crispy texture..."
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
@@ -11,7 +16,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Home page</title>
+    <title>Home page -Croissant</title>
   </head>
   <body>
     <h1>🥐 Croissant</h1>
